--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
 </head>
 <body>
 
-<h1>Cake is Yummy</h1>
+  <h1>Cake is Yummy</h1>
+  <p>
+  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam magna
+massa, tempor id ornare quis, interdum ut nisl. Sed sit amet dui
+malesuada, ullamcorper enim in, facilisis orci. Nullam sed iaculis ante,
+a varius mi. Nullam a metus lorem.
+  </p>
 
 </body>
 </html>
