--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 <body>
 
 <h1>Cake is Yummy</h1>
-
+<p>
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam magna
+massa, tempor id ornare quis, interdum ut nisl. Sed sit amet dui
+malesuada, ullamcorper enim in, facilisis orci. Nullam sed iaculis ante,
+a varius mi. Nullam a metus lorem. Proin rutrum pulvinar lorem blandit
+feugiat. Aenean a eleifend massa, nec suscipit sapien. Sed consequat enim
+ut leo dictum tincidunt. Fusce sed posuere erat. Aenean blandit feugiat
+sem, id molestie sem aliquam at.
+</p>
 </body>
 </html>
